--- a/app/src/main/res/layout/osc_out.xml
+++ b/app/src/main/res/layout/osc_out.xml
@@ -11,7 +11,7 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
-        <androidx.legacy.widget.Space
+        <Space
             android:layout_width="match_parent"
             android:layout_height="8dp" />
 
@@ -60,7 +60,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <androidx.legacy.widget.Space
+        <Space
             android:layout_width="match_parent"
             android:layout_height="8dp" />
 
