--- a/app/src/main/res/layout/osc_out.xml
+++ b/app/src/main/res/layout/osc_out.xml
@@ -51,11 +51,11 @@
                         android:text="2"/>
 
                     <Button
-                        android:id="@+id/button3"
+                        android:id="@+id/buttonFilter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="3"/>
+                        android:text="send /filter"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
