Move settings fragment to send fragment

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     //Copyright (c) 2018 Electronic Theatre Controls, Inc., http://www.etcconnect.com
     //
     // Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -32,10 +31,5 @@
         android:id="@+id/navigation_oscIn"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_oscIn" />
-
-    <item
-        android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_settings" />
 
 </menu>
